normalize.css bower

--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,4 @@
+@import (less) '../bower_components/normalize-css/normalize.css';
 @import (less) '../bower_components/owl.carousel/dist/assets/owl.carousel.css';
 @import (less) '../bower_components/owl.carousel/dist/assets/owl.theme.default.css';
 
@@ -18,4 +19,3 @@
 @import 'components/card.less';
 
 @import 'components/background.less';
-
