--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -25,3 +25,12 @@
 		color: @main-brand-color;
 	}
 }
+
+.hook-navbar-toggler() {
+	display: inline-block;	
+	span {
+		display: inline-block;
+		height: 2px;
+		background-color: @main-brand-color;
+	}
+}
