--- a/css/main.css
+++ b/css/main.css
@@ -1184,6 +1184,7 @@ textarea.form-control {
 .header {
   position: fixed;
   width: 100%;
+  z-index: 2;
 }
 .section {
   position: relative;
@@ -1251,6 +1252,14 @@ textarea.form-control {
 .navbar-link.active,
 .navbar-link:hover {
   color: #00e0d0;
+}
+.navbar-toggler {
+  display: inline-block;
+}
+.navbar-toggler span {
+  display: inline-block;
+  height: 2px;
+  background-color: #00e0d0;
 }
 @media all and (min-width: 768px) {
   .navbar-toggler {
